Cleaned up and fixed header spacing.

--- a/static/general.styl
+++ b/static/general.styl
@@ -65,13 +65,13 @@ a:active
   color link-bright
 
 h1
-  margin 0 0 0.75em
+  margin 0 0 0.6em
 
   font-size 3em
   font-weight 600
 
 h2
-  margin 0 0 0.875em
+  margin 0 0 0.7em
 
   color text-medium-dark
   font-size 2.75em
@@ -81,11 +81,14 @@ h3
 h4
 h5
 h6
-  margin 0 0 1em
+  margin 0 0 0.9em
 
   color text-medium-medium
   font-size 2.5em
   font-weight 600
+
+h3
+  margin-bottom 0.7em
 
 h4
   color text-medium
